force-app/main/default/objects/Fax_To_Case_Queue_Assignment__c/Fax_To_Case_Queue_Assignment__c.object-meta.xml
<CustomObject>
    <description>Used for assigning fax to case queues to primary users or internal backups</description>
    <label>Case Queue Assignment</label>
    <nameField>
        <label>Case Queue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Queue Assignments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>