force-app/main/default/objects/Fax_To_Case_Queue_Assignment__c/fields/Division_Info__c.field-meta.xml
<CustomField>
    <fullName>Division_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to add Fax to Case Queue Assignments as a related list on Division Info</description>
    <label>Division Info</label>
    <referenceTo>Operational_Data__c</referenceTo>
    <relationshipName>Fax_To_Case_Queue_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>