force-app/main/default/objects/Fax_To_Case_Queue_Assignment__c/fields/Group_Mailbox_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Group_Mailbox_Email_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contains the name of the email address related to the group mailbox setup for forwarding for Email to Case aka. Fax to Case</description>
    <inlineHelpText>Enter only one email address related to the Queue.  This information is for the user to give to a customer.</inlineHelpText>
    <label>Group Mailbox Email Address</label>
    <referenceTo>Group_Mailbox_Email_Address__c</referenceTo>
    <relationshipName>Case_Queue_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>