force-app/main/default/objects/Fax_To_Case_Queue_Assignment__c/fields/Team_Lead_Name__c.field-meta.xml
<CustomField>
    <fullName>Team_Lead_Name__c</fullName>
    <label>Team Lead Name</label>
    <length>99</length>
    <type>Text</type>
</CustomField>