force-app/main/default/objects/Fax_To_Case_Queue_Assignment__c/listViews/Active_Queues.listView-meta.xml
<ListView>
    <fullName>Active_Queues</fullName>
    <columns>NAME</columns>
    <columns>Group_Mailbox_Email_Address__c</columns>
    <columns>Team_Lead_Name__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>ALL ACTIVE QUEUES</label>
</ListView>