force-app/main/default/objects/Fax_To_Case_Queue_Assignment__c/listViews/ALL_PRINT_OR_FP.listView-meta.xml
<ListView>
    <fullName>ALL_PRINT_OR_FP</fullName>
    <columns>NAME</columns>
    <columns>Group_Mailbox_Email_Address__c</columns>
    <columns>Team_Lead_Name__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>PRT</value>
    </filters>
    <label>PRINT - ALL QUEUES</label>
</ListView>