force-app/main/default/objects/Fax_To_Case_Queue_Assignment__c/listViews/CIN.listView-meta.xml
<ListView>
    <fullName>CIN</fullName>
    <columns>NAME</columns>
    <columns>Group_Mailbox_Email_Address__c</columns>
    <columns>Team_Lead_Name__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>CIN</value>
    </filters>
    <filters>
        <field>Team_Lead_Name__c</field>
        <operation>notContain</operation>
        <value>AMANDA WEBBER</value>
    </filters>
    <label>FS &amp; PKG - CIN</label>
</ListView>