force-app/main/default/objects/Fax_To_Case_Queue_Assignment__c/listViews/CIN_PRT_CX_LEX_Fax_To_Case_Queue_Assignment.listView-meta.xml
<ListView>
    <fullName>CIN_PRT_CX_LEX_Fax_To_Case_Queue_Assignment</fullName>
    <filterScope>Queue</filterScope>
    <label>CIN-PRT-ESC-LEX</label>
    <queue>CIN_PRT_ESC_LEX</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>