force-app/main/default/objects/Fax_To_Case_Queue_Assignment__c/listViews/COST_MAINT_MAX_COST_CHANGES_E2C_Fax_To_Case_Queue_Assignment.listView-meta.xml
<ListView>
    <fullName>COST_MAINT_MAX_COST_CHANGES_E2C_Fax_To_Case_Queue_Assignment</fullName>
    <filterScope>Queue</filterScope>
    <label>COST MAINT-MAX COST CHANGES-E2C</label>
    <queue>COST_MAINT_MAX_COST_CHANGES_E2C</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>