force-app/main/default/objects/Fax_To_Case_Queue_Assignment__c/listViews/COST_MAINTENANCE_E2C_Fax_To_Case_Queue_Assignment.listView-meta.xml
<ListView>
    <fullName>COST_MAINTENANCE_E2C_Fax_To_Case_Queue_Assignment</fullName>
    <filterScope>Queue</filterScope>
    <label>COST MAINTENANCE-E2C</label>
    <queue>COST_MAINTENANCE_E2C</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>