force-app/main/default/objects/Fax_To_Case_Queue_Assignment__c/listViews/DAL.listView-meta.xml
<ListView>
    <fullName>DAL</fullName>
    <columns>NAME</columns>
    <columns>Group_Mailbox_Email_Address__c</columns>
    <columns>Team_Lead_Name__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>DAL</value>
    </filters>
    <label>FS &amp; PKG - DAL</label>
</ListView>