force-app/main/default/objects/Fax_To_Case_Queue_Assignment__c/listViews/DAL_PRINT.listView-meta.xml
<ListView>
    <fullName>DAL_PRINT</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Team_Lead_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>DAL</value>
    </filters>
    <filters>
        <field>Team_Lead_Name__c</field>
        <operation>contains</operation>
        <value>FINLEY</value>
    </filters>
    <label>DAL - PRINT</label>
    <language>en_US</language>
    <sharedTo>
        <group>SFDCAdminAccount</group>
    </sharedTo>
</ListView>